crates/es-fluent-core/tests/snapshots/namer_and_registry_tests__snapshot_ftl_variant_and_typeinfo_debug__type_info.snap
---
source: crates/es-fluent-core/tests/namer_and_registry_tests.rs
expression: "&type_info"
---
FtlTypeInfo {
    type_kind: Struct,
    type_name: "ErrorType",
    variants: [
        FtlVariant {
            name: "Network",
            ftl_key: "error_type-Network",
            args: [
                "code",
                "message",
            ],
            module_path: "",
        },
        FtlVariant {
            name: "Io",
            ftl_key: "error_type-Io",
            args: [],
            module_path: "",
        },
    ],
    file_path: None,
    module_path: "test",
}
