crates/es-fluent-core/tests/snapshots/namer_and_registry_tests__snapshot_ftl_variant_and_typeinfo_debug__variant.snap
---
source: crates/es-fluent-core/tests/namer_and_registry_tests.rs
expression: "&variant"
---
FtlVariant {
    name: "Network",
    ftl_key: "error_type-Network",
    args: [
        "code",
        "message",
    ],
    module_path: "",
}
